Prevent status panel from overflowing

--- a/wagtail/admin/static_src/wagtailadmin/scss/layouts/page-editor.scss
+++ b/wagtail/admin/static_src/wagtailadmin/scss/layouts/page-editor.scss
@@ -8,6 +8,7 @@
 .page-editor {
   .content-wrapper {
     margin-bottom: 10em;
+    overflow-x: hidden;
   }
 
   .breadcrumb {
